--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,11 @@
+:root{
+    --color-primario: #1F92BF;
+    --color-primario_altero: #1B70A6;
+    --color-primario_oscuro: #0B438C;
+    --color-bg: #F2E7DC;
+    --color-secundario: #D93223;
+}
+
 html {
     box-sizing: border-box;
     font-size: 62.5%; 
@@ -6,7 +14,7 @@ html {
     box-sizing: inherit;
 }
 body {
-    background-color: #100E17;
+    background-color: var(--color-bg);
     font-family: 'Rubik', sans-serif;
     font-size: 1.6rem;
 }
@@ -15,7 +23,6 @@ p {
 }
 /** Globales **/
 h1, h2, h3  {
-    color: #ffffff;
     margin: 0;
 }
 h1 {
@@ -30,7 +37,7 @@ h3 {
     font-size: 2.8rem;
 }
 .contenedor {
-    max-width: 1200px;
+    max-width: 80%;
     margin: 0 auto;
 }
 .separador {
@@ -102,7 +109,7 @@ h3 {
     justify-content: space-between;
 }
 .nombre-sitio a {
-    color: white;
+    color: var(--color-primario_oscuro);
     text-decoration: none;
 }
 .buscador {
