--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -20,7 +20,29 @@
         <h1>
             <a href="/">EnJobs</a>
         </h1>
+
+        {{#if barra}}
+            <div class="buscador">
+                <form action="#">
+                    <input type="text" class="buscar">
+                    <input type="submit" value="Buscar">
+                </form>
+            </div>
+        {{/if}}
     </div>
+
+    <header class="site-header contenedor separador">
+          <h2>{{nombrePagina}}</h2> 
+
+           {{#if tagLine}}
+                <p class="tagline">{{tagLine}}</p>
+           {{/if}}      
+
+           {{#if boton}}
+                <a href="/vacantes/nueva" class="btn btn-azul">Publicar Nueva Vacante</a>
+           {{/if}}
+    </header>
+
 
     <div class="contenido-principal contenedor">
 
