--- a/public/css/app.css
+++ b/public/css/app.css
@@ -294,7 +294,7 @@ h3 {
     padding-top: 1rem;
     flex: 0 0 18rem;
     font-size: 1.8rem;
-    color: white;
+    color: var(--color-gris_claro);
     font-weight: 700;
     text-transform: uppercase;
 }
