--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,800&display=swap" rel="stylesheet">
     {{!-- Style --}}
-    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
+    {{!-- Trix --}}
+    <link rel="stylesheet" href="/css/trix.css">
 </head>
 
 <body>
@@ -50,6 +52,8 @@
 
     </div>
 
+    
+    <script src="/js/trix.js"></script>
 </body>
 
 </html>
