--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -35,5 +35,15 @@
             <trix-editor input="x"></trix-editor>
         </div>
 
+        <h3>Conocimientos</h3>
+
+        <ul class="lista-conocimientos">
+            {{#seleccionarHabilidades a}}
+            {{/seleccionarHabilidades}}
+        </ul>
+
+        <div class="campo centrar-horizontal">
+            <input type="submit" value="publicar" class="btn btn-azul">
+        </div>
     </form>
 </main>
