Muestro vacantes en la vista home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -447,7 +447,7 @@ p.candidatos {
 }
 .lista-candidatos p,
 .lista-vacantes p {
-    color: white;
+    color: var(--color-gris_claro);
     text-align: center;
 }
 
