--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -22,10 +22,10 @@
             <label>Contrato</label>
             <select name="contrato">
                 <option value="" disabled selected>Seleccionar</option>
-                <option value="completo">Tiempo Completo</option>
-                <option value="medio">Medio Tiempo</option>
-                <option value="remoto">Trabajo Remoto</option>
-                <option value="freelance">Trabajo Freelance</option>
+                <option value="Tiempo Completo">Tiempo Completo</option>
+                <option value="Medio Tiempo">Medio Tiempo</option>
+                <option value="Trabajo Remoto">Trabajo Remoto</option>
+                <option value="Trabajo Freelance">Trabajo Freelance</option>
             </select>
         </div>
         <h3>Descripción del trabajo</h3>
