--- a/public/css/app.css
+++ b/public/css/app.css
@@ -472,22 +472,23 @@ p.candidatos {
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    top: 65px;
+    top: 25rem;
 }
 .alerta {
     padding: 1rem 3rem; 
     color: white;
-    font-size: 2.2rem;
+    font-size: 2rem;
     text-align: center;
     text-transform: uppercase;
     font-weight: 700;
     margin-top: .3rem;
+    border-radius: .5rem;
 }
 .correcto {
     background-color: #00C897;
 }
 .error {
-    background-color: #C80045;
+    background-color: #BF2C0B;
 }
 .desaparecer {
     opacity: 0;
