--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -47,7 +47,12 @@
 
 
     <div class="contenido-principal contenedor">
-
+        {{#if mensajes}}
+            <div class="alertas">
+                {{#mostrarAlertas mensajes}}
+                {{/mostrarAlertas}}
+            </div>
+        {{/if}}
         {{{body}}}
 
     </div>
