Autenticación de usuario terminada

--- a/views/iniciar-sesion.handlebars
+++ b/views/iniciar-sesion.handlebars
@@ -1,5 +1,5 @@
 <main class="contenedor">
-    <form action="/inciar-sesion" method="post" class="default-form">
+    <form action="/iniciar-sesion" method="post" class="default-form">
         <div class="campo">
             <label>Email</label>
             <input type="email" name="email" placeholder="Tu Email" required>
