Validación de vacantes y usuario con express-validator

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -31,6 +31,15 @@
                 </form>
             </div>
         {{/if}}
+
+        {{#if cerrarSesion}}
+            <div class="cerrar-sesion">
+                <p>{{nombre}}</p>
+                <a href="/administracion">Administracion</a>
+                <a href="/cerrar-sesion">Cerrar Sesión</a> 
+            </div>
+        {{/if}}
+
     </div>
 
     <header class="site-header contenedor separador">
