--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -4,19 +4,19 @@
 
          <div class="campo">
             <label>Titulo</label>
-            <input type="text" name="titulo" placeholder="Nombre del puesto" required>
+            <input type="text" name="titulo" placeholder="Nombre del puesto">
          </div>
          <div class="campo">
             <label>Empresa</label>
-            <input type="text" name="empresa" placeholder="Nombre de la empresa" required>
+            <input type="text" name="empresa" placeholder="Nombre de la empresa">
          </div>
          <div class="campo">
             <label>Ubicación</label>
-            <input type="text" name="ubicacion" placeholder="Zona de trabajo" required>
+            <input type="text" name="ubicacion" placeholder="Zona de trabajo">
          </div>
         <div class="campo">
             <label>Sueldo</label>
-            <input type="text" name="sueldo" placeholder="Sueldo aproximado" required>
+            <input type="text" name="sueldo" placeholder="Sueldo aproximado">
         </div>
         <div class="campo">
             <label>Contrato</label>
