--- a/views/administracion.handlebars
+++ b/views/administracion.handlebars
@@ -7,25 +7,28 @@
 
     <h2>Tus Vacantes</h2>
 
-    {{#if vacantes.length}}
+
+    <div class="panel-administracion">
+        {{#if vacantes.length}}
         {{#each vacantes as |vacante|}}
-            <div class="vacante panel-administracion">
-                <div class="caja">
-                    <h3>{{empresa}}</h3>
-                    <p class="puesto">{{titulo}}</p>
-                </div>
-                <div class="centrar-vertical caja">
-                    <a href="/candidatos/{{id}}" class="btn btn-amarillo">Candidatos</a>
-                </div>
-                <div class="centrar-vertical caja">
-                    <a href="/vacantes/editar/{{url}}" class="btn btn-verde">Editar</a>
-                </div>
-                <div class="centrar-vertical caja">
-                    <a href="#" data-eliminar="{{id}}" class="btn btn-rojo">Eliminar</a>
-                </div>
+        <div class="vacante">
+            <div class="caja">
+                <h3>{{empresa}}</h3>
+                <p class="puesto">{{titulo}}</p>
             </div>
+            <div class="centrar-vertical caja">
+                <a href="/candidatos/{{id}}" class="btn btn-azul">Candidatos</a>
+            </div>
+            <div class="centrar-vertical caja">
+                <a href="/vacantes/editar/{{url}}" class="btn btn-azul">Editar</a>
+            </div>
+            <div class="centrar-vertical caja">
+                <a href="#" data-eliminar="{{id}}" class="btn btn-azul">Eliminar</a>
+            </div>
+        </div>
         {{/each}}
-    {{else}}
-        <p>No hay vacantes</p>
-    {{/if}}
+        {{else}}
+        <p>No hay vacantes disponibles</p>
+        {{/if}}
+    </div>
 </main>
