--- a/views/editar-perfil.handlebars
+++ b/views/editar-perfil.handlebars
@@ -15,6 +15,7 @@
         <div class="campo">
             <label>Imagen</label>
             <input type="file" name="imagen" placeholder="Tu foto de perfil">
+            <img src="uploads/perfiles/{{usuario.imagen}}" class="editar-foto">
         </div>
         <div class="campo">
             <input type="submit" value="Guardar Cambios" class="btn btn-azul">
